updating copy paste ability for website

--- a/pelican-bootstrap3/templates/article.html
+++ b/pelican-bootstrap3/templates/article.html
@@ -85,6 +85,7 @@
                 </h1>
             </header>
 
+            <button onclick="copyFunction()">Copy Example</button>
 
             <div class="entry-content">
                 {{ article.content }}
